Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-184

pass RAT check

    XMLWordPrintableJSON

Details

    Description

      RAT check shows unknown license for quite a few files:

      Here's how to reproduce and marvel at "5030 Unknown Licenses".

      $ java -jar ~/src/apache/rat-0.11/apache-rat-0.11.jar .

      *****************************************************
      Summary
      -------
      Generated at: 2015-11-23T19:40:00-08:00
      Notes: 79
      Binaries: 789
      Archives: 20
      Standards: 5871

      Apache Licensed: 825
      Generated Documents: 0

      JavaDocs are generated and so license header is optional
      Generated files do not required license headers

      5030 Unknown Licenses

      *******************************

      Attachments

        Issue Links

          Activity

            People

              wlin Wen Lin
              lei_chang Lei Chang
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: