HAWQ-184. Add license header to source files(part 3)