src/backend/executor/execBitmapHeapScan.c
@@ -5,7 +5,6 @@
  * Portions Copyright (c) 1996-2008, PostgreSQL Global Development Group
  * Portions Copyright (c) 1994, Regents of the University of California
  *
- * Copyright (c) 2014 Pivotal, Inc.
  */
 #include "postgres.h"
 
